Modernize Maven publication and target Java 21